# Fos-R

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  clean_test.sh  docker-compose.yml  extract_learn_generate.sh  flake.nix  replay.toml  setup.sh  tash  test.sh  test.toml
crates/fosr/: Cargo.toml  README.md  build.rs
crates/fosr-ebpf/: Cargo.toml  README.md  build.rs
crates/fosr-ebpf/src/: checksum.rs  ebpf.rs  lib.rs  main.rs
crates/fosr-gui/: Cargo.toml  README.md
crates/fosr-gui/assets/: fosr-gui-macos.icns
crates/fosr-gui/src/: about_tab.rs  app.rs  injection.rs  injection_tab.rs  lib.rs  main.rs
crates/fosr-gui/src/configuration/: configuration_file.rs  configuration_tab.rs  mod.rs
crates/fosr-gui/src/generation/: generation_core.rs  generation_io.rs  generation_tab.rs  generation_ui_components.rs  generation_utils.rs  generation_validation.rs  mod.rs
crates/fosr-gui/src/shared/: config_model.rs  configuration_file.rs  files.rs  mod.rs  ui_utils.rs
crates/fosr-gui/src/timepicker/: button.rs  mod.rs  popup.rs
crates/fosr-gui/src/ui/: about.rs  generate.rs  generation.rs  injection.rs  mod.rs
crates/fosr-gui/src/visualization/: mod.rs  visualization_shapes.rs  visualization_stream.rs  visualization_tab.rs  visualization_utils.rs
crates/fosr-lib/: Cargo.toml  README.md
crates/fosr-lib/default_models/: time_profile.json
crates/fosr-lib/default_models/automata/: dns.json  mqtt.json  smtp.json
crates/fosr-lib/default_models/bn/: bn_additional_data.json  bn_common.bifxml  bn_tcp.bifxml  bn_udp.bifxml
crates/fosr-lib/default_models/cicids17/automata/: dce_rpc-SF.json  dns-SF.json  dns.json  ftp-SF.json  ftp-data-SF.json  gssapi-RST.json  gssapi-SF.json  http-REJ.json  http-RST.json  http-S0.json  http-SF.json  http-SH.json  krb-SF.json  krb.json  krb_tcp-RST.json  ldap_tcp-REJ.json  ldap_tcp-RST.json  ldap_udp.json  ntp.json  ssh-S0.json  ssh-SF.json  ssl-REJ.json  ssl-RST.json  ssl-S0.json  ssl-SF.json  ssl-SH.json
crates/fosr-lib/default_models/cicids17/bn/: bn_additional_data.json  bn_common.bifxml  bn_tcp.bifxml  bn_udp.bifxml
crates/fosr-lib/default_models/cupid/automata/: dce_rpc-SF.json  dhcp.json  dns.json  gssapi,dce_rpc,ntlm-SF.json  gssapi,dce_rpc-SF.json  gssapi,ntlm,smb-RST.json  gssapi,ntlm,smb-SF.json  gssapi,smb,krb-SF.json  gssapi,smb,ntlm-RST.json  gssapi,smb,ntlm-SF.json  gssapi,smb-RST.json  gssapi,smb-SF.json  gssapi-SF.json  http-RST.json  http-S0.json  http-SF.json  krb.json  krb_tcp-RST.json  krb_tcp-SH.json  ldap_tcp-REJ.json  ldap_tcp-RST.json  ldap_udp.json  ntlm,dce_rpc-SF.json  ntlm-SF.json  ntp.json  smtp-SF.json  ssl-RST.json  ssl-S0.json  ssl-SF.json  ssl-SH.json
crates/fosr-lib/default_models/cupid/bn/: bn_additional_data.json  bn_common.bifxml  bn_tcp.bifxml  bn_udp.bifxml
crates/fosr-lib/default_models/legacy/automata/: https.json  ntp.json
crates/fosr-lib/default_models/legacy/bn/: bn_common.bifxml  bn_tcp.bifxml  bn_udp.bifxml
crates/fosr-lib/default_models/patterns/: patterns.json
crates/fosr-lib/src/: config.rs  export.rs  icmp.rs  lib.rs  models.rs  pcap2flow.rs  stage0.rs  stage1.rs  stage3.rs  stage4.rs  stats.rs  structs.rs  tcp.rs  udp.rs  utils.rs
crates/fosr-lib/src/inject/: fast.rs  iptables.rs  mod.rs
crates/fosr-lib/src/stage1/: bayesian_networks.rs  bifxml.rs  flowchronicle.rs  mod.rs
crates/fosr-lib/src/stage2/: automaton.rs  bayesian_networks.rs  bifxml.rs  flowchronicle.rs  mod.rs  tadam.rs
crates/fosr-lib/src/stage3/: automaton.rs  mod.rs  tadam.rs
crates/fosr/default_models/automata/: dns.json
crates/fosr/default_models/bn/: bn_additional_data.json  bn_common.bifxml  bn_tcp.bifxml
crates/fosr/src/: cmd.rs  config.rs  export.rs  lib.rs  main.rs  pcap2flow.rs  stage0.rs  stage3.rs  structs.rs  udp.rs  ui.rs
crates/fosr/src/inject/: ebpf.rs  fast.rs  iptables.rs  reliable.rs
crates/fosr/src/stage0/: mod.rs
crates/fosr/src/stage1/: bayesian_networks.rs  bifxml.rs  flowchronicle.rs  mod.rs
crates/fosr/src/stage2/: automaton.rs  mod.rs  tadam.rs
crates/fosr/src/stage3/: mod.rs
crates/fosr/src/stage4/: ebpf.rs  fast.rs  iptables.rs  mod.rs  reliable.rs
crates/fosr/tests/: cli_tests.rs  test_config.yaml
default_models/: profil.toml
default_models/automata/: smtp.json
dev/: README.md  Vagrantfile  linux.yml  main.yml  win32nt.yml  windows.yml
dev/profile/: profile.toml
dev/templates/: fosr.service.j2
evaluation/: evaluation.py  marginal_distribution.py
features_extraction/: extract_TCP.sh  flow2csv.sh  fosr.zeek  payload.zeek
generation/: CHANGELOG.md  Cargo.toml  README.md  Vagrantfile  breizhctf-patterns.json  breizhctf.toml  crosscompile.sh  dockerfile  example.toml  makefile  test.toml  vagrant.toml
generation/default_models/: https.json  mqtt.json
generation/src/: cmd.rs  config.rs  icmp.rs  lib.rs  main.rs  structs.rs  tcp.rs  udp.rs  ui.rs  utils.rs
generation/src/replay/: mod.rs
generation/src/stage0/: mod.rs
generation/src/stage1/: flowchronicle.rs  mod.rs
generation/src/stage2/: automaton.rs  mod.rs  replay.rs  tadam.rs
generation/src/stage3/: mod.rs
generation/src/stage4/: bind_ports.rs  mod.rs  ongoing_flow.rs
learning/: export_patterns.py  flowchronicle_learn.py  learn_automaton.py  requirements.txt
learning/automata/: learn_automaton.py  learn_stage3.py  requirements.txt
learning/bn/: learn_stage0.py  learn_stage1.py  learn_stage2.py  requirements.txt
learning/flowchronicle/: requirements.txt
learning/temporal_model/: learn_stage0.py  learn_stage1.py
models/tas/: test.dot
public/: analysis-intro.md  analysis.md  changelog.md  compile.md  config_doc.md  footer.html  footer.md  fosr.icns  howto-inject.md  howto-pcap.md  howto-pcap2flow.md  howto-untaint.md  howto.md  index.md  intro.md  lib.md  limitations.md  other_software.md  refs.md  roadmap.md  schema.md  styles.css  template.html  test_integrated.html  test_isolated.html  usecases.md
src/: cmd.rs  config.rs  lib.rs  main.rs  structs.rs  ui.rs  utils.rs
src/replay/: config.rs  mod.rs
src/stage0/: mod.rs
(+10 files in other folders)
