[package]
name = "fosr"
authors = ["Pierre-François Gimenez"]
version = "0.1.0"
edition = "2021"
description = "FosR (forgery of security recordings) is a synthetic pcap generator. This Rust project is only used for the generation itself but relies on machine learning software available on our GitHub."
homepage = "https://pfgimenez.fr/fosr"
repository = "https://github.com/FosR-project/FosR"
license = "GPL-3.0"

[dependencies]
