[package]
name = "fosr"
version = "0.1.1-dev"
authors = ["Pierre-François Gimenez","Florentin Labelle","Evan Morin"]
edition = "2024"
description = "Fos-R (Forger Of Security Records) is a synthetic network traffic generator."
homepage = "https://pfgimenez.fr/fosr/"
repository = "https://github.com/Fos-R/Fos-R"
license = "GPL-3.0"

[[bin]]
name = "fosr"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
crossbeam-channel = "0.5.13"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
log = { version = "0.4.22" }
pnet = "0.35.0"
pnet_packet = "0.35.0"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rand_core = "0.6.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
libc = "0.2.162"
kd-tree = "0.6.0"
ctrlc = "3.4.5"
include-bytes-zstd = "0.1.0"
pcap-file = "2.0.0"

[features]
default = ["net_injection", "replay"]
net_injection = []
replay = []
