[package]
name = "fosr"
version = "0.1.1"
authors = ["Pierre-François Gimenez","Florentin Labelle","Evan Morin"]
edition = "2024"
description = "Fos-R (Forger Of Security Records) is a synthetic network traffic generator."
homepage = "https://pfgimenez.fr/fosr/"
repository = "https://gitlab.inria.fr/pirat-public/Fos-R"
license = "GPL-3.0"
rust-version = "1.85.1"
categories = ["network-programming","security","science"]
exclude = ["/dev","/learning","/resources"]

[[bin]]
name = "fosr"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
crossbeam-channel = "0.5.13"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
log = { version = "0.4.22" }
pnet = "0.35.0"
pnet_packet = "0.35.0"
rand = "0.9.1"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
rand_core = "0.9.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.2"
kd-tree = "0.6.0"
ctrlc = "3.4.5"
include-bytes-zstd = "0.1.0"
pcap-file = "2.0.0"
indicatif = "0.18.0"
thingbuf = "0.1.6"
humantime = "2.2.0"

[features]
default = ["net_injection", "replay"]
net_injection = []
replay = []
