[package]
name = "fosr-ebpf"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
network-types = "0.0.8"

[dev-dependencies]
rand_xorshift = "0.1.1"
rand = "0.6"

[build-dependencies]
which = { version = "6.0.0", default-features = false }

[[bin]]
name = "fosr-ebpf-prog"
path = "src/main.rs"
