[package]
name = "fosr-gui"
version = "0.1.0"
edition = "2024"
description = "A GUI for Fos-R."

[package.metadata.bundle]
name = "Fos-R"
identifier = "com.inria.fosr"
icon = ["../../public/fosr.icns"]

[[bin]]
name = "fosr-gui"
path = "src/main.rs"
required-features = ["native"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = []

[dependencies]
eframe = "0.33.0"
log = "0.4.28"
wasm-bindgen = "0.2.105"
fosr = { path = "../fosr", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
