[package]
name = "fosr-gui"
version = "0.1.0"
edition = "2024"
description = "A GUI for Fos-R."

[package.metadata.bundle]
name = "Fos-R"
identifier = "com.inria.fosr"
icon = ["../../public/fosr.icns"]

[[bin]]
name = "fosr-gui"
path = "src/main.rs"
required-features = ["native"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = []

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
eframe = "0.33.0"
log = "0.4.28"
wasm-bindgen = "0.2.106"
fosr-lib = { version = "1.0.0-dev", path = "../fosr-lib", features = ["wasm_js"] }
rfd = "0.15.4"
humantime = "2.3.0"
indicatif = "0.18.3"
pcap-file = "2.0.0"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"

