[package]
name = "fosr-lib"
version = "1.0.0-dev"
authors = ["Pierre-François Gimenez <pierre-francois.gimenez@inria.fr>","Dorian Bachelot","Florentin Labelle","Evan Morin"]
edition = "2024"
description = "The library of Fos-R (Forger Of Security Records), the AI-based synthetic network traffic generator."
homepage = "https://fosr.inria.fr"
repository = "https://gitlab.inria.fr/pirat-public/Fos-R"
license = "GPL-3.0"
rust-version = "1.85.1"
categories = ["network-programming","security","science"]
keywords = ["networking", "ai", "security"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
crossbeam-channel = "0.5.15"
fosr-ebpf = { version = "0.1.1", path = "../fosr-ebpf", optional = true }
getrandom = "0.3.4"
include-bytes-zstd = "0.1.0"
indicatif = "0.18.3"
kd-tree = "0.6.1"
log = "0.4.28"
pcap-file = "2.0.0"
pnet = { version = "0.35.0", default-features = false }
pnet_packet = "0.35.0"
rand = "0.9.2"
rand_core = "0.9.3"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0"
serde_yaml = "0.9.34"
thingbuf = "0.1.6"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
aya = { version = "0.13.1", default-features = false, optional = true }

[features]
default = []
net_injection = ["pnet/std"]
wasm_js = ["getrandom/wasm_js"] # needed to compile to wasm32 target. No used by default to avoid bloating the Cargo.lock file

# Linux only
iptables = ["net_injection"]

# Linux & Windows only
ebpf = ["dep:aya", "net_injection", "dep:fosr-ebpf"]

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.build-dependencies]
anyhow = { version = "1", default-features = false, optional = true }
aya-build = { version = "0.1.2", default-features = false, optional = true }
fosr-ebpf = { path = "../fosr-ebpf", optional = true }
