[package]
name = "fosr"
version = "0.1.2"
authors = ["Pierre-François Gimenez <pierre-francois.gimenez@inria.fr>","Dorian Bachelot","Florentin Labelle","Evan Morin"]
edition = "2024"
description = "Fos-R (Forger Of Security Records) is an AI-based synthetic network traffic generator."
homepage = "https://fosr.inria.fr"
repository = "https://gitlab.inria.fr/pirat-public/Fos-R"
license = "GPL-3.0"
rust-version = "1.85.1"
default-run = "fosr"
categories = ["network-programming","security","science"]

[[bin]]
name = "fosr"

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
humantime = "2.2.0"
include-bytes-zstd = "0.1.0"
indicatif = "0.18.0"
kd-tree = "0.6.0"
log = { version = "0.4.22" }
num_cpus = "1.17.0"
pcap-file = "2.0.0"
pnet = "0.35.0"
pnet_packet = "0.35.0"
rand = "0.9.1"
rand_core = "0.9.3"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
thingbuf = "0.1.6"
toml = "0.9.2"
fosr-ebpf = { version = "0.1.1", path = "../fosr-ebpf", optional = true }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
aya = { version = "0.13.1", default-features = false, optional = true }

[dev-dependencies]
assert_cmd = "2.0.14"
hex-literal = "1.0.0"
sha2 = "0.10.9"

[features]
default = ["net_injection", "ebpf"]
net_injection = []

# Linux only
iptables = ["net_injection"]

# Linux & Windows only
ebpf = ["dep:aya", "net_injection", "dep:fosr-ebpf"]

