[package]
name = "fosr"
version = "0.2.0-dev"
authors = ["Pierre-François Gimenez <pierre-francois.gimenez@inria.fr>"]
edition = "2024"
description = "Fos-R (Forger Of Security Records) is an AI-based synthetic network traffic generator."
homepage = "https://fosr.inria.fr"
repository = "https://gitlab.inria.fr/pirat-public/Fos-R"
license = "GPL-3.0"
rust-version = "1.85.1"
categories = ["network-programming","security","science"]
keywords = ["cli", "networking", "ai", "security"]

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
fosr-lib = { version = "0.2.0-dev", path = "../fosr-lib" }
humantime = "2.3.0"
indicatif = "0.18.3"
itertools = "0.14.0"
log = "0.4.28"
num_cpus = "1.17.0"
pcap-file = "2.0.0"
pnet = { version = "0.35.0", default-features = false }
pnet_packet = "0.35.0"
thingbuf = "0.1.6"

[target.'cfg(all(target_os = "linux", any(target_env = "", target_env = "gnu")))'.dependencies]
tikv-jemallocator = "0.6.1"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"

[dev-dependencies]
assert_cmd = "2.1.1"
hex = "0.4.3"
sha2 = "0.10.9"

[features]
default = []
net_injection = ["pnet/std", "fosr-lib/net_injection"]

# Linux only
iptables = ["net_injection", "fosr-lib/iptables"]

# Linux & Windows only
ebpf = ["net_injection", "fosr-lib/ebpf"]

[package.metadata.deb]
section = "science"
depends = ["$auto", "iptables"]
